rem unnecc code,comment and console, change font sixze inline to css, call inital fun in exp-inner, set seq number while drag from content to wrkspc, if row info open then hide dragdrop, sent all wrksp objx -rearrange data in wrksp,add curs-ptr and set allfiless empty in my files comp, rem .length check if array check impl in list apis

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -321,6 +321,11 @@
                                   class="mr-1 fas"></i>
                                 Hide Label in Workspace
                               </li>
+                              <!-- <li><i class="fas fa-check mr-1"></i>Can be downloaded</li>
+                              <ul class="list-unstyled ml-3">
+                                <li><i class="fas fa-check mr-1"></i>Internally</li>
+                                <li><i class="fas fa-check mr-1"></i>Externally</li>
+                              </ul> -->
                             </ul>
                           </div>
                         </div>
