--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -22,30 +22,13 @@
                 </mat-form-field>
               </div>
               <div class="col-md-6 align-self-center row justify-content-end">
-                <!-- <div class="dropdown mr-2">
-                  <button class="btn btn-light dropdown-toggle" id="propDD" data-toggle="dropdown">
-                    Property
-                  </button>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="propDD"
-                    (click)="$event.stopPropagation();">
-                    <button class="dropdown-item" *ngFor="let pr of props">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="{{pr.id}}">
-                        <label class="form-check-label" for="{{pr.id}}">
-                          {{pr.name}}
-                        </label>
-                      </div>
-                    </button>
-                  </div>
-                </div> -->
                 <div class="dropdown mr-2">
                   <button class="btn btn-light dropdown-toggle" id="divisionDD" data-toggle="dropdown">
                     Division
                   </button>
                   <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" aria-labelledby="divisionDD"
                     (click)="$event.stopPropagation();">
-                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3"
-                      [floatLabel]="'never'">
+                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
                       <i matPrefix class="fas fa-search"></i>
                       <input matInput placeholder="Search ...">
                     </mat-form-field>
