--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.html
@@ -86,7 +86,7 @@
         </div>
       </div>
     </div>
-    <div class="text-center mt-5 text-secondary" style="font-size: 20px;" *ngIf="cntntArr.length == 0">
+    <div class="text-center mt-5 text-secondary font-20" *ngIf="cntntArr.length == 0">
       No Data Found
     </div>
   </ng-container>
@@ -143,7 +143,7 @@
         </tr>
       </tbody>
     </table>
-    <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="cntntArr.length == 0">
+    <div class="mx-auto mt-5 text-secondary font-20" *ngIf="cntntArr.length == 0">
       No Data Found
     </div>
   </div>
