--- a/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
+++ b/src/app/web-app/resource/collection/collection-inner/collection-inner.component.scss
@@ -32,10 +32,12 @@
 .cdk-drag:not(.cdk-drag-dragging) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+.font-20{
+  font-size: 20px;
+}
 
 
 /* Dragula css */
-
 /* in-flight clone */
 .gu-mirror {
   position: fixed !important;
@@ -45,21 +47,17 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   filter: alpha(opacity=80);
   pointer-events: none;
-
   .options {
     display: none;
   }
-
   .card-body {
     position: relative;
     min-height: 220px;
     max-height: 220px;
-
     @media (min-width:1200px) {
       min-height: 280px;
       max-height: 280px;
     }
-
     img {
       position: absolute;
       top: 50%;
@@ -100,9 +98,4 @@
 
 .vamp:not(:last-child) {
   border-bottom: 1px solid #777;
-}
-
-.hello {
-  display: flex;
-  flex-wrap: wrap
 }
