--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.html
@@ -67,7 +67,7 @@
           </ng-template>
         </ng-container>
       </ng-container>
-      <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="wrkspcCntnts.length<=0">
+      <div class="mx-auto mt-5 text-secondary font-20" *ngIf="wrkspcCntnts.length<=0">
         No Data Found
       </div>
     </ng-container>
