--- a/src/app/web-app/resource/exp/exp-list/exp-list.component.html
+++ b/src/app/web-app/resource/exp/exp-list/exp-list.component.html
@@ -10,7 +10,7 @@
         <div class="text text-center h4">{{w.name}}</div>
       </div>
     </div>
-    <div class="mx-auto mt-5 text-secondary" style="font-size: 20px;" *ngIf="wrkSpcs.length<=0">
+    <div class="mx-auto mt-5 text-secondary font-20" *ngIf="wrkSpcs.length<=0">
       No Data Found
     </div>
   </div>
