--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
@@ -2,16 +2,12 @@
   .icon {
     min-height: 278px;
     position: relative;
-
     @media (min-width: 768px) {
       min-height: 245;
     }
-
     @media (min-width: 1200px) {
       min-height: 294px;
     }
-
-
     img {
       position: absolute;
       max-width: 100%;
@@ -21,4 +17,7 @@
       transform: translate(-50%, -50%);
     }
   }
+}
+.font-20{
+  font-size: 20px;
 }
