--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -149,8 +149,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <div class="text-center text-secondary" style="min-height: 230px; padding-top:95px;"
-                  *ngIf="tags.length == 0">
+                <div class="text-center text-secondary pt-5 mt-5" *ngIf="tags.length == 0">
                   No Data Found
                 </div>
               </div>
