--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -28,7 +28,8 @@
                   </button>
                   <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" aria-labelledby="divisionDD"
                     (click)="$event.stopPropagation();">
-                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
+                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3"
+                      [floatLabel]="'never'">
                       <i matPrefix class="fas fa-search"></i>
                       <input matInput placeholder="Search ...">
                     </mat-form-field>
@@ -96,8 +97,8 @@
                   </tr>
                 </tbody>
               </table>
-              <div class="text-center text-secondary pt-5 mt-4" *ngIf="grps.length == 0">
-                No Group found
+              <div class="text-center text-secondary pt-5 mt-5" *ngIf="grps.length == 0">
+                No Group Found
               </div>
             </div>
             <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
