msg text changes in modal and no data, commentapp link for phjase 2, show all catg in tags page

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -227,7 +227,7 @@
           </tbody>
         </table>
         <div class="text-center text-secondary pt-5 mt-5" *ngIf="!loading && ancmnts.length == 0">
-          No Announcement found
+          No Announcement Found
         </div>
       </div>
       <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
