--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -320,7 +320,7 @@
         </tbody>
       </table>
       <div class="text-center text-secondary pt-5 mt-5" *ngIf="!loading && usrs.length == 0">
-        No User found
+        No User Found
       </div>
     </div>
     <app-pagination [pageSize]="pageSize" [totalCount]="totalCount" [page]="pageNo"
