edit content name

--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -61,7 +61,27 @@
         <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
         <div class="card" *ngIf="!docLoading">
           <div class="card-header row m-0">
-            <h5 class="mb-0 pt-1 col-10 pl-0 align-self-center">{{rowInfo.name}}
+            <h5 class="mb-0 pt-1 col-10 pl-0 align-self-center">
+              <a class="float-right text-hi-dark-grey" *ngIf="!edits.name" (click)="openEdit('name')">
+                <i class="fas fa-edit"></i>
+              </a>
+              <div class="view" *ngIf="!edits.name">
+                <p class="name-text mb-0 text-dark">{{rowInfo.name}}</p>
+              </div>
+              <div class="edit" *ngIf="edits.name">
+                <div>
+                  <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 bg-white"
+                    [floatLabel]="'never'">
+                    <input matInput placeholder="Name" name="name" class="ml-0">
+                  </mat-form-field>
+                  <div class="form-group text-right mb-0">
+                    <button class="btn btn-secondary btn-sm mr-2" (click)="closeEdit('name')">Cancel</button>
+                    <button class="btn btn-primary btn-sm" [disabled]="disb.d" (click)="updContent('name')">
+                      <app-loader [type]="'btn'" *ngIf="disb.d"></app-loader>Submit
+                    </button>
+                  </div>
+                </div>
+              </div>
             </h5>
             <div class="mr-2 col-1 ml-auto">
               <div class="btn btn-light" (click)="closeDoc()">
