--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -61,7 +61,7 @@
         <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
         <div class="card" *ngIf="!docLoading">
           <div class="card-header row m-0">
-            <h5 class="mb-0 pt-1 col-10 pl-0 align-self-center">
+            <h5 class="mb-0 col-10 pl-0 align-self-center p-2 mt-1 dark-bg-hover rounded">
               <a class="float-right text-hi-dark-grey" *ngIf="!edits.n" (click)="openEdit('n')">
                 <i class="fas fa-edit"></i>
               </a>
@@ -72,7 +72,7 @@
                 <div>
                   <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 bg-white"
                     [floatLabel]="'never'">
-                    <input matInput placeholder="Name"  [(ngModel)]="nm" name="nm" class="ml-0">
+                    <input matInput placeholder="Name" [(ngModel)]="nm" name="nm" class="ml-0">
                   </mat-form-field>
                   <div class="form-group text-right mb-0">
                     <button class="btn btn-secondary btn-sm mr-2" (click)="closeEdit('n')">Cancel</button>
